# qqtools

./: .editorconfig  .flake8  .gitignore  .isort.cfg  CHANGELOG.md  MAINIFEST.in  README.md  coverage_all_local.json  coverage_unit.json  coverage_unit_local.json  coverage_unit_pkg.json  project.toml  pyproject.toml  pytest.ini  setup.py  tox.ini  tox_full_output.txt
.github/: pipeline.md  publish.md  readme.md
.github/workflows/: publish.yml
docs/: code_style.md  log_format.md  qConfig_en.md
docs/adr/qpipeline/: 0001-runner-boundary-ownership.md  0002-gradient-accumulation-step-semantics.md  0003-scheduler-step-trigger-semantics.md
docs/archive/pitch/: 001-qexp-experiment-session-grouping.md  002-qexp-shared-root-scope.md  003-qexp-batch-submit-transaction-semantics.md  004-qexp-resubmit-semantics.md  005-qexp-truth-domains-and-derived-views.md  006-qexp-derived-index-families-and-convergence-tiers.md
docs/manual/: qexp.md  qpipeline_timing.md
docs/pitch/: qexp_batch_submit_transaction_20260420.md  runner.md
docs/prd/: runner.md
docs/spec/: qexp_product_spec.md  qexp_runtime_spec.md  qexp_v2_product_spec_20260408.md  qexp_v2_runtime_spec_20260408.md
perf/speed/qbalance_partion/: test_qbalance_partion  test_qbalance_partion.py
perf/speed/qtriplets/: test_qtriplets.py
perf/speed/refdict/: test_refdict.py
qqtools/: __init__.py  qdict.py  qimport.py  qlogreader.py  qpath.py  qtimer.py  version.py
qqtools/config/: qyaml.py
qqtools/data/: qdatalist.py
qqtools/qm/: ase.py  constant.py  xtb.py
qqtools/torch/: qcheckpoint.py  qcontextprovider.py  qdataset.py  qdist.py  qgpu.py  qoptim.py  qscatter.py  qsparse.py  qtypecheck.py
qqtools/torch/nn/: __init__.py  donothing.py  qmlp.py
src/qqtools/: __init__.py  qcontext.py  qdict.py  qimport.py  qlogreader.py  qtimer.py  version.py
tests/: TODOLIST.md  conftest.py  import.py  readme.md
tests/demo/: _demo_eval_summary_logging.py  _demo_rich_progress.py  apply_patch_probe.txt  myrunner.py
tests/speed/: test_qscatter.py
tests/unit/: test_import.py  test_qcontext.py  test_qdict.py
(+204 files in other folders)
