[project]
name = "qqtools"
description = "A small tool package for qq"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.11"
authors = [{ name = "qq" }]
dependencies = ["torch", "PyYAML", "matplotlib", "pandas", "scipy", "rich"]

# note:
# scipy requires: numpy
# seaborn requires: matplotlib

[project.optional-dependencies]
full = ["rich", "scikit-learn", "lmdb", "tqdm", "requests"]
dev = ["pytest", "black", "isort", "flake8"]


[project.urls]
Repository = "https://github.com/kzhoa/qqtools.git"


[project.scripts]
qread = "qqtools.cli.qread:main"

# === build settings ===
[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]
include = ["qqtools*"]
exclude = ["tests*"]


[tool.setuptools.dynamic]
version = { attr = "qqtools.version.__version__" }

# === dev settings ===
[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
ignore = "F401,E402,E501"
